multiple fix + DARK MODE

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-top: 1px solid var(--gray-dark);
+  border-top: 1px solid var(--border-color);
 }
 .logo {
   font-size: var(--font-size-logo);
