--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   width: var(--container-full);
   padding: 30px 0 40px 0;
-  color: var(--white-color);
+  color: var(--text-color);
 }
 a {
   display: flex;
@@ -46,6 +46,7 @@ a {
   justify-content: center;
   cursor: pointer;
   font-weight: var(--font-weight-medium);
+  color: var(--text-color);
 }
 
 .searchIconSvg,
@@ -79,6 +80,13 @@ a {
 .submitIcon {
   position: absolute;
 }
+
+[data-theme="light"] {
+  .btnLog {
+    color: white;
+  }
+}
+
 @media screen and (max-width: 1440px) {
   .navbar {
     width: 95%;
