--- a/src/components/Trending/Trending.module.css
+++ b/src/components/Trending/Trending.module.css
@@ -8,6 +8,6 @@
   display: flex;
   width: 100%;
   justify-content: space-between;
-  border: var(--gray-dark);
+  border: var(--border-color);
   padding-bottom: 20px;
 }
