--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,12 @@
 
 :root {
   --primary-color: #2871ff;
-  --secondary-color: #c4c4c4;
-  --dark-secondary: #2e2e2e;
-  --gray-dark: #3d3d3d;
+  --secondary-color: #2e2e2e;
+  --border-color: #3d3d3d;
+  --cover-radius: 0;
+  --divider-color: #3d3d3d;
   --background-color: #111316;
-  --black-color: #000000;
-  --white-color: #ffffff;
+  --text-color: #ffffff;
   --font-family-base: "Inter";
   --font-size-minor: 0.8125rem;
   --font-size-base: 1rem;
@@ -24,7 +24,7 @@
   --font-weight-medium: 500;
   --font-weight-semi-bold: 600;
   --font-weight-bold: 700;
-  --border-radius: 4px;
+  --border-radius: 5px;
   --container-full: 1372px;
   --container-medium: 1024px;
   --container-small: 768px;
@@ -56,12 +56,12 @@ p {
 }
 
 a {
-  color: var(--white-color);
+  color: var(--text-color);
   text-decoration: none;
 }
 
 body::-webkit-scrollbar-track {
-  background-color: var(--dark-secondary);
+  background-color: var(--secondary-color);
 }
 
 body::-webkit-scrollbar {
@@ -72,4 +72,14 @@ body::-webkit-scrollbar {
 body::-webkit-scrollbar-thumb {
   background-color: var(--primary-color);
   border-radius: 20px;
+}
+
+[data-theme="light"] {
+  --primary-color: #2871ff;
+  --secondary-color: #c4c4c400;
+  --cover-radius: 5px;
+  --background-color: #ffffff;
+  --border-color: #3d3d3d00;
+  --divider-color: #c4c4c4;
+  --text-color: #000000;
 }
